# vn_time_tracker

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  build.rs
src/: core.rs  main.rs  ui.rs
src/core/: game_crud.rs  game_launch.rs  icons.rs  json_storage.rs
src/ui/: add_game_window.rs  app.rs  delete_game_window.rs  main_window.rs  show_sessions_window.rs  ui_patterns.rs
