[package]
name = "vn_time_tracker"
version = "1.0.0"
edition = "2024"

[dependencies]
eframe = { version = "0.32.1", features = ["persistence"] }
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.142"
chrono = "0.4.41"
egui_extras = "0.32.1"
rfd = "0.15.4"
image = "0.25.8"

[build-dependencies]
winres = "0.1"

[[bin]]
name = "vn_time_tracker"
path = "src/main.rs"